# schoty

./: .gitignore  CMakeLists.txt  README.md  hello-asm.txt  hello.txt
src/: CMakeLists.txt  Command.h  IOManager.cpp  IOManager.h  MainWindow.cpp  MainWindow.h  Processor.cpp  Processor.h  RegisterWidget.cpp  RegisterWidget.h  main.cpp  main.ui  register.ui
src/commands/: Command.cpp  Command.h  CommandADD.cpp  CommandADD.h  CommandAND.cpp  CommandAND.h  CommandCMP.cpp  CommandCMP.h  CommandDIV.cpp  CommandDIV.h  CommandIN.cpp  CommandIN.h  CommandJGT.cpp  CommandJGT.h  CommandJLT.cpp  CommandJLT.h  CommandJMP.cpp  CommandJMP.h  CommandJZ.cpp  CommandJZ.h  CommandLOAD.cpp  CommandLOAD.h  CommandMOV.cpp  CommandMOV.h  CommandMUL.cpp  CommandMUL.h  CommandNOT.cpp  CommandNOT.h  CommandOR.cpp  CommandOR.h  CommandOUT.cpp  CommandOUT.h  CommandSET.cpp  CommandSET.h  CommandSTOP.cpp  CommandSTOP.h  CommandSTORE.cpp  CommandSTORE.h  CommandSUB.cpp  CommandSUB.h  (+5 more)
